--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 @font-face {
   font-family: 'PetrovSans';
-  src: url('/src/assets/fonts/PetrovSans-Bold.ttf') format('truetype');
+  src: url('../src/assets/fonts/PetrovSans-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
 }
