--- a/src/style.css
+++ b/src/style.css
@@ -49,6 +49,25 @@ body::after {
   z-index: -1;
 }
 
+.background-container {
+  position: relative;
+  width: 100%;
+  min-height: 800px;
+}
+
+.background-container::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 800px;
+  background-image: url('assets/abstract-green-design.jpeg');
+  background-size: cover;
+  background-position: center;
+  z-index: 0;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
