--- a/src/style.css
+++ b/src/style.css
@@ -157,13 +157,17 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+ a:hover {
+    color: #00D48D;
+  }
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #006F49;
   }
   button {
     background-color: #f9f9f9;
@@ -181,4 +185,9 @@ button:focus-visible {
 
 .animate-zoom {
   animation: zoomInOut 10s ease-in-out infinite;
+}
+
+/* ancho fijo para forzar el wrap de títulos mobile */
+@layer utilities {
+  .w-title-mobile { max-width: 300px; }   /* ≈ anchura de Figma */
 }
