--- a/src/style.css
+++ b/src/style.css
@@ -170,7 +170,7 @@ button:focus-visible {
     color: #006F49;
   }
   button {
-    background-color: #f9f9f9;
+    /*background-color: #f9f9f9;*/
   }
 }
 
