--- a/src/style.css
+++ b/src/style.css
@@ -181,6 +181,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+#partnerTrack {            /* si ya tienes la transición en línea, omite */
+  transition: transform 700ms ease-out;
+}
+
  a:hover {
     color: #00D48D;
   }
@@ -227,10 +231,10 @@ button:focus-visible {
 @layer utilities {
   .w-title-mobile { max-width: 300px; }   /* ≈ anchura de Figma */
   /* H2 y “brand” fluidos – se reducen en pantallas bajas */
-  .fluid-h2-en     { font-size: clamp(67px, 3.8vw, 95px); }
-  .fluid-h2-2-en   { font-size: clamp(89px, 5vw, 116px); }
+  .fluid-h2-en     { font-size: clamp(80px, 3.8vw, 95px); }
+  .fluid-h2-2-en   { font-size: clamp(105px, 5vw, 116px); }
   /* NexaDigit */
-  .fluid-brand { font-size: clamp(205px, 11vw, 255px); }
+  .fluid-brand { font-size: clamp(230px, 11vw, 255px); }
   /* Si aún sobra poco espacio en ≤ 850 px de alto, reduce 12 % extra */
 
    /* Español (ligeramente más pequeño) */
@@ -253,13 +257,13 @@ button:focus-visible {
 
 
   /* ajuste cuando el alto ≥920px */
-  @media (min-height:920px){
+  @media (min-height:960px){
     .fluid-h2-en      { font-size: clamp(85px, 4vmin,100px); }
     .fluid-h2-2-en    { font-size: clamp(113px,5vmin,130px); }
     .fluid-brand   { font-size: clamp(250px,12vmin,300px); }
   }
 
-    @media (min-height:920px){
+    @media (min-height:960px){
     .fluid-h2-es      { font-size: clamp(79px, 4vmin,100px); }
     .fluid-h2-2-es    { font-size: clamp(96px,5vmin,130px); }
   }
