--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -320,7 +320,7 @@ html { scroll-behavior: smooth; }
     inset: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/src/assets/background-header.svg');
+    background-image: url('/src/assets/background-header.webp');
     background-repeat: no-repeat;
     background-position: center 250px;
     background-size: 1454px 654px;
