--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,9 +6,10 @@
 /* PetrovSans (local font) */
 @font-face {
   font-family: 'PetrovSans';
-  src: url('../assets/fonts/PetrovSans-Bold.ttf') format('truetype');
+  src: url('../../public/assets/fonts/PetrovSans-Bold.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 /* Utility class for PetrovSans */
