--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -93,7 +93,6 @@ html {
   top: 0; left: 0;
   width: 100%;
   height: 800px;
-  background-image: url('../assets/abstract-green-design.jpeg');
   background-size: cover;
   background-position: center;
   z-index: 0;
@@ -334,7 +333,7 @@ html { scroll-behavior: smooth; }
     inset: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/src/assets/background-header.webp');
+    background-image: url('/public/assets/background-header.png');
     background-repeat: no-repeat;
     background-position: center 250px;
     background-size: 1454px 654px;
